--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <h2>Services</h2>
                 </A>
                 <ul>
-                    <li> ACSAC Artifacts Evaluation Committee </li>
+                    <li> 2022, ACSAC Artifacts Evaluation Committee </li>
                     
                 </ul>
                 
