--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                                 <A HREF="#Research Experiences">Research Experiences</A> |
                                 <A HREF="#Publications">Publications</A> |
                                 <A HREF="#Awards & Honors">Awards & Honors</A> |
+                                <A HREF="#Services">Services</A>
                                 <!--<A HREF="#Projects">Projects</A> |-->
                                 <!--<A HREF="#Services">Services</A> |-->
  
