--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 <h2>Research Interest</h2>
             </A>
             My research interests include reinforcement learning, sampling method and generative model. Currently, I
-            focus on the following research topics: Offline reinforcement learning; Convex duality in reinforcement learning; Adversarial policy;
-            Generative model; Variational inference.
+            focus on the following research topics: reinforcement learning security; offline reinforcement learning; convex duality in reinforcement learning; adversarial policy;
+            generative model; variational inference.
             <br />
 
 
