--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
                                 <i>Annual Computer Security Applications Conference (ACSAC)</i>,
                                 2022.
                                 (<b>Technical Track, 12 pages</b>)
+                                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
+                                
                             </span>
                     </p>
                     <p style="text-indent: -1.6rem;margin-left: 0rem;">
