--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     
                 <!-- map -->   
 		<div style="margin:10px auto;height: 270px; pointer-events: none;">
-			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=500&t=tt&d=x0OH_adH2t_SCrC7Z9P2mQ-27rJ6L2XAo0D_WJl6pEU'></script>
+			<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
 		</div>
 	<br>			
 	
