--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
                 </ul>
                     
                 <!-- map -->   
-		<div style="margin:10px auto;height: 270px; pointer-events: none;">
-			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII"></script>
-		</div>
+		
+		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
+		
 	<br>			
 	
 
