--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 </ul>
                     
                 <!-- map -->   
-		<div style="margin:5px auto;height: 100px; pointer-events: none;">
+		<div style="height:50px; width:60px;">
 		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
 		</div>
 	<br>			
