--- a/index.html
+++ b/index.html
@@ -298,9 +298,11 @@
                 </ul>
                     
                 <!-- map -->   
+		<p> <center>	
 		<div style="height:500px; width:600px;">
 		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
 		</div>
+		</p> </center>
 	<br>			
 	
 
