--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
                     
                 <!-- map -->   
 		<p> <center>	
-		<!-- <div style="height:500px; width:600px;"> -->
+		<div style="height:400px; width:500px;">
 		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
-		<!-- </div> -->
+		</div>
 		</p> </center>
 	<br>			
 	
