--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     
                 <!-- map -->   
 		<p> <center>	
-		<div style="height:400px; width:500px;">
+		<div style="height:400px; width:500px; pointer-events: none;">
 		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
 		</div>
 		</p> </center>
