--- a/index.html
+++ b/index.html
@@ -164,10 +164,26 @@
             <A NAME="Publications">
                 <h2>Publications</h2>
             </A>
+ 
 
 
-
-
+            <p>
+    	    <b><font color="red">2022</font></b>
+            </p>
+            <ul>
+	    <li>
+            	 <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                            <span><b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Jieke Shi, Arunesh Sinha, Bowen Xu, David Lo, Xinwen Hou,
+                                Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
+                                <i>Annual Computer Security Applications Conference (ACSAC)</i>,
+                                2022.
+                                (<b>Technical Track, 15 pages</b>)
+                                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
+                                
+                            </span>
+                 </p>
+	    </li>
+            </ul>
             <p><b>Conferences</b>: </p>
             <font size="3">
                 <ul>
