--- a/index.html
+++ b/index.html
@@ -172,18 +172,15 @@
             </p>
             <ul>
 	    <li>
-            	 <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span><b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Jieke Shi, Arunesh Sinha, Bowen Xu, David Lo, Xinwen Hou,
-                                Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
-                                <i>Annual Computer Security Applications Conference (ACSAC)</i>,
-                                2022.
-                                (<b>Technical Track, 15 pages</b>)
-                                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
-                                
-                            </span>
-                 </p>
+		<b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Jieke Shi, Arunesh Sinha, Bowen Xu, David Lo, Xinwen Hou,
+                Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
+                <i>Annual Computer Security Applications Conference (<b>ACSAC</b>)</i>,
+                2022.
+                (<b>Technical Track, 15 pages</b>)
+                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
 	    </li>
             </ul>
+	   
             <p><b>Conferences</b>: </p>
             <font size="3">
                 <ul>
