--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 	    <li>
 		<b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Jieke Shi, Arunesh Sinha, Bowen Xu, David Lo, Xinwen Hou,
                 Guoliang Fan, “Curiosity-Driven and Victim-Aware Adversarial Policies”,
-                <i>Annual Computer Security Applications Conference (<b>ACSAC</b>)</i>,
+                <i>Annual Computer Security Applications Conference</i> (<b>ACSAC</b>),
                 2022.
                 (<b>Technical Track, 15 pages</b>)
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
@@ -192,7 +192,7 @@
             <li>
 		Yunpeng Bai*, <b>Chen Gong</b>*, Bin Zhang,  Guoliang Fan, Xinwen Hou, Yu Liu.
                 “Cooperative Multi-Agent Reinforcement Learning with Hypergraph Convolution”,
-                <i>International Joint Conference on Neural Networks (<b>IJCNN</b>)</i>,
+                <i>International Joint Conference on Neural Networks </i> (<b>IJCNN</b>),
                 2022.
                 (<b>Oral, 10 pages</b>)
                 [<a href="https://arxiv.org/pdf/2112.06771.pdf" target="_blank">Paper</a>]
@@ -207,12 +207,45 @@
   	    <li>
 		<b>Chen Gong</b>*, Qiang He*, Yunpeng Bai, Xinwen Hou, Guoliang Fan, Yu Liu
                 “Wide-Sense Stationary Policy Optimization with Bellman Residual on Video Games”,
-                <i>IEEE International Conference on Multimedia and Expo (<b>ICME</b>)</i>,
+                <i>IEEE International Conference on Multimedia and Expo </i> (<b>ICME</b>),
                 2021: 1-6.
                 (<b>Oral, 6 pages</b>)
                 [<a href="https://ieeexplore.ieee.org/document/9428293" target="_blank">Paper</a>] 
 	    </li>
+	    <li>
+		<b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
+                “Stable Training of Bellman Error in Reinforcement Learning”,
+                <i>International Conference on Neural Information Processing</i> (<b>ICONIP</b>),
+                2020:439-448.
+                (<b>Oral, 10 pages</b>)
+                [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
+	    </li>
+	    <li>
+		<b>Chen Gong</b>, Xinchen Zhou, Yunyun Niu.
+                “Pattern recognition of epilepsy using parallel probabilistic neural network”, 
+                <i>Applied Intelligence</i>, 2021: 1-12. (IF=5.09)
+                [<a href="https://link.springer.com/article/10.1007/s10489-021-02509-w" target="_blank">Paper</a>]
+	    </li>
+	    <li>
+		<b>Chen Gong</b>, Jiahui Liu, Yunyun Niu.
+                “Intracranial Epileptic Seizures Detection Based on an Optimized Neural Network Classifier”, 
+                <i>Chinese Journal of Electronics</i>, 2021, 30(3): 419-425. (IF=1.01)
+                [<a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cje.2021.03.005" target="_blank">Paper</a>]
+	    </li>
 	    </ul>
+		
+	    <p>
+    	    <b><font color="red">2020</font></b>
+            </p>
+            <ul>
+	    <li>
+		<b>Chen Gong</b>, Xiaoxiong Zhang, Yunun Niu.
+                “Identification of epilepsy from intracranial EEG signals by using different neural network models”,
+                <i>Computational Biology and Chemistry</i>, 2020, 87: 107310. (IF=3.78)
+                [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1476927120305806" target="_blank">Paper</a>] 
+	    </li>
+	    </ul>
+		
 		    
             <p><b>Conferences</b>: </p>
             <font size="3">
