--- a/index.html
+++ b/index.html
@@ -205,20 +205,24 @@
             </p>
             <ul>
   	    <li>
+		<span>
 		<b>Chen Gong</b>*, Qiang He*, Yunpeng Bai, Xinwen Hou, Guoliang Fan, Yu Liu
                 “Wide-Sense Stationary Policy Optimization with Bellman Residual on Video Games”,
                 <i>IEEE International Conference on Multimedia and Expo </i> (<b>ICME</b>),
                 2021: 1-6.
                 (<b>Oral, 6 pages</b>)
                 [<a href="https://ieeexplore.ieee.org/document/9428293" target="_blank">Paper</a>] 
+		</span>
 	    </li>
 	    <li>
+		<span>
 		<b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
                 “Stable Training of Bellman Error in Reinforcement Learning”,
                 <i>International Conference on Neural Information Processing</i> (<b>ICONIP</b>),
                 2020:439-448.
                 (<b>Oral, 10 pages</b>)
                 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
+		</span>
 	    </li>
 	    <li>
 		<b>Chen Gong</b>, Xinchen Zhou, Yunyun Niu.
