--- a/index.html
+++ b/index.html
@@ -165,8 +165,6 @@
                 <h2>Publications</h2>
             </A>
  
-
-
             <p>
     	    <b><font color="red">2022</font></b>
             </p>
@@ -330,20 +328,20 @@
                     </ul>
 
 
-                <p><b>Pre-print</b>: </p>
+		<b><font color="red">Pre-print</font></b>
                 <font size="3">
                     <ul>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span>[2] <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Zhou Yang, Xiaoyu Chen, Xinwen Hou, Xianjie Zhang, Yu Liu, Guoliang Fan.
+                            <span><li> <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Zhou Yang, Xiaoyu Chen, Xinwen Hou, Xianjie Zhang, Yu Liu, Guoliang Fan.
                                 “The f-Divergence Reinforcement Learning Framework”.
                                 [<a href="https://arxiv.org/abs/2109.11867" target="_blank">Arxiv</a>]
-                            </span>
+                            </li></span>
                         </p>
                         <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                            <span>[1] Xiaoyu Chen*, <b>Chen Gong</b>*, Qiang He, Xinwen Hou, Yu Liu,
+                            <span><li> Xiaoyu Chen*, <b>Chen Gong</b>*, Qiang He, Xinwen Hou, Yu Liu,
                                 “LDC-VAE: A Latent Distribution Consistency Approach to Variational AutoEncoders”.
                                 [<a href="https://arxiv.org/abs/2109.10640" target="_blank">Arxiv</a>]
-                            </span>
+                            </li></span>
                         </p>
                     </ul>
                     
