--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     	    <b><font color="red">2021</font></b>
 	    <font size="3">
             <ul>
-  	    <li>
+  	    <li><p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<span>
 		<b>Chen Gong</b>*, Qiang He*, Yunpeng Bai, Xinwen Hou, Guoliang Fan, Yu Liu
                 “Wide-Sense Stationary Policy Optimization with Bellman Residual on Video Games”,
@@ -210,8 +210,8 @@
                 (<b>Oral, 6 pages</b>)
                 [<a href="https://ieeexplore.ieee.org/document/9428293" target="_blank">Paper</a>] 
 		</span>
-	    </li>
-	    <li>
+	    </p></li>
+	    <li><p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<span>
 		<b>Chen Gong</b>, Yunpeng Bai, Xinwen Hou, Xiaohui Ji.
                 “Stable Training of Bellman Error in Reinforcement Learning”,
@@ -220,19 +220,19 @@
                 (<b>Oral, 10 pages</b>)
                 [<a href="https://link.springer.com/chapter/10.1007/978-3-030-63823-8_51" target="_blank">Paper</a>]
 		</span>
-	    </li>
-	    <li>
+	    </p></li>
+	    <li><p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<b>Chen Gong</b>, Xinchen Zhou, Yunyun Niu.
                 “Pattern recognition of epilepsy using parallel probabilistic neural network”, 
                 <i>Applied Intelligence</i>, 2021: 1-12. (IF=5.09)
                 [<a href="https://link.springer.com/article/10.1007/s10489-021-02509-w" target="_blank">Paper</a>]
-	    </li>
-	    <li>
+	    </p></li>
+	    <li><p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<b>Chen Gong</b>, Jiahui Liu, Yunyun Niu.
                 “Intracranial Epileptic Seizures Detection Based on an Optimized Neural Network Classifier”, 
                 <i>Chinese Journal of Electronics</i>, 2021, 30(3): 419-425. (IF=1.01)
                 [<a href="https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/cje.2021.03.005" target="_blank">Paper</a>]
-	    </li>
+	    </p></li>
 	    </ul>
 		
     	    <b><font color="red">2020</font></b>
