--- a/index.html
+++ b/index.html
@@ -193,15 +193,14 @@
                 2022.
                 (<b>Oral, 10 pages</b>)
                 [<a href="https://arxiv.org/pdf/2112.06771.pdf" target="_blank">Paper</a>]
-	    </P></li>
-		    
+	    </P></li>	    
 	    </ul>
-		
-
+	
+	
     	    <b><font color="red">2021</font></b>
 	    <font size="3">
             <ul>
-  	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
+  	    <p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<span><li>
 		<b>Chen Gong</b>*, Qiang He*, Yunpeng Bai, Xinwen Hou, Guoliang Fan, Yu Liu
                 “Wide-Sense Stationary Policy Optimization with Bellman Residual on Video Games”,
