--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             Location: 95 Zhongguancun East Road, BEIJING, CHINA<br />
                             <class="staffshortcut">
                                 <!-- <A HREF="#News">News</A> | -->
-                                <A HREF="#Interest">Research Interest</A> |
+                                <A HREF="#Bio">Bio</A> |
                                 <A HREF="#Education">Education</A> |
                                 <A HREF="#Research Experiences">Research Experiences</A> |
                                 <A HREF="#Publications">Publications</A> |
@@ -98,10 +98,10 @@
 
 
 
-            <A NAME="Interest">
-                <h2>Research Interest</h2>
+            <A NAME="Bio">
+                <h2>Bio</h2>
             </A>
-            My research interests include reinforcement learning, sampling method and generative model. Currently, I
+            I am a master student in Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. My research interests include reinforcement learning, sampling method and generative model. Currently, I
             focus on the following research topics: reinforcement learning security; offline reinforcement learning; convex duality in reinforcement learning; adversarial policy;
             generative model; variational inference.
             <br />
