--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             Location: 95 Zhongguancun East Road, BEIJING, CHINA<br />
                             <class="staffshortcut">
                                 <!-- <A HREF="#News">News</A> | -->
-                                <A HREF="#Bio">Bio</A> |
+                                <A HREF="#Bio">Short Bio</A> |
                                 <A HREF="#Education">Education</A> |
                                 <A HREF="#Research Experiences">Research Experiences</A> |
                                 <A HREF="#Publications">Publications</A> |
@@ -98,11 +98,14 @@
 
 
 
-            <A NAME="Bio">
+            <A NAME="Short Bio">
                 <h2>Bio</h2>
             </A>
-            I am a master student in Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. My research interests include reinforcement learning, sampling method and generative model. Currently, I
-            focus on the following research topics: reinforcement learning security; offline reinforcement learning; convex duality in reinforcement learning; adversarial policy;
+            From  2020.06 - now,I am a master's student in the Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. 
+	    From 2021.09 -  2022.09, I worked as a visiting student in the School of Computing and Information Systems, Singapore Management University, where I was honored to work closely with 
+		Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a> and <a href="https://yangzhou6666.github.io/" target="_blank">Zhou Yang</a>.
+	    In 2020.06, I obtained my Bachelor's degree from the School of Information Engineering, China University of Geosciences, Beijing, where I worked with Prof. <a href="https://dblp.org/pid/57/9704.html" target="_blank">Yunyun Niu</a>.
+	    Currently, I focus on the following research topics: reinforcement learning security; offline reinforcement learning; convex duality in reinforcement learning; adversarial policy;
             generative model; variational inference.
             <br />
 
@@ -142,7 +145,7 @@
             <font size="3">
                 <ul>
 
-                    <li>2021.08-Now, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
+                    <li>2021.08-2020.09, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
                      | Adversarial Policy & Reinforcement Learning Testing </li>
                     <li>2021.02-Now, Institute of Automation, Chinese Academy of Sciences, Beijing, China, Supervisor:
                     Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Offline Reinforcement learning, Off-policy evaluation, Convex duality & Generative model </li>
