--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
             <A NAME="Short Bio">
-                <h2>Bio</h2>
+                <h2>Short Bio</h2>
             </A>
             From  2020.06 - now,I am a master's student in the Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. 
 	    From 2021.09 -  2022.09, I worked as a visiting student in the School of Computing and Information Systems, Singapore Management University, where I was honored to work closely with 
