--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <i>Annual Computer Security Applications Conference</i> (<b>ACSAC</b>),
                 2022.
                 (<b>Technical Track, 15 pages</b>)
-		[<a href="./Files/2022__ACSAC_Curiosity_Driven_Victim_Aware_RL_Attack.pdf" target="_blank">PDF</a>]
+		[<a href="./Files/2022__ACSAC_Curiosity_Driven_Victim_Aware_RL_Attack.pdf" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
             </p></li>
 		    
@@ -192,6 +192,7 @@
                 2022.
                 (<b>Oral, 10 pages</b>)
                 [<a href="https://arxiv.org/pdf/2112.06771.pdf" target="_blank">Paper</a>]
+		[<a href="https://github.com/cugbbaiyun/HGCN-MIX" target="_blank">Code</a>]
 	    </P></li>	    
 	    </ul>
 	
