--- a/index.html
+++ b/index.html
@@ -256,6 +256,14 @@
 	    <b><font color="red">Pre-print</font></b>
             <font size="3">
             <ul>
+		<p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> <b>Chen Gong</b>*,Zhou Yang, Yunpeng Bai, Junda He, Jieke Shi, Arunesh Sinha, Bowen Xu, Xinwen Hou, Guoliang Fan, David Lo.
+                “Mind Your Data! Hiding Backdoors in Offline Reinforcement Learning Datasets”.
+                [<a href="https://arxiv.org/pdf/2210.04688.pdf" target="_blank">Arxiv</a>]
+		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
+                </li></span>
+                </p>    
+		
              	<p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Zhou Yang, Xiaoyu Chen, Xinwen Hou, Xianjie Zhang, Yu Liu, Guoliang Fan.
                 “The f-Divergence Reinforcement Learning Framework”.
