--- a/index.html
+++ b/index.html
@@ -257,6 +257,12 @@
             <font size="3">
             <ul>
 		<p style="text-indent: -1.6rem;margin-left: 0rem;">
+		<span><li> Siyu Xing, <b>Chen Gong</b>*, Hewei Guo, Xiaoyu Zhang, Xinwen Hou, Yu Liu.
+                “Unsupervised Domain Adaptation GAN Inversion for Image Editing”. under review IEEE Transaction on Image Processing.
+                </li></span>
+                </p>  
+		    
+		<p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> <b>Chen Gong</b>*,Zhou Yang, Yunpeng Bai, Junda He, Jieke Shi, Arunesh Sinha, Bowen Xu, Xinwen Hou, Guoliang Fan, David Lo.
                 “Mind Your Data! Hiding Backdoors in Offline Reinforcement Learning Datasets”. under review IEEE Transaction on Software Engineering
                 [<a href="https://arxiv.org/pdf/2210.04688.pdf" target="_blank">Arxiv</a>]
