--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 		    
 		<p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> <b>Chen Gong</b>*,Zhou Yang, Yunpeng Bai, Junda He, Jieke Shi, Arunesh Sinha, Bowen Xu, Xinwen Hou, Guoliang Fan, David Lo.
-                “Mind Your Data! Hiding Backdoors in Offline Reinforcement Learning Datasets”. under review IEEE Transaction on Software Engineering
+                “Mind Your Data! Hiding Backdoors in Offline Reinforcement Learning Datasets”. under review IEEE Transaction on Software Engineering.
                 [<a href="https://arxiv.org/pdf/2210.04688.pdf" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
                 </li></span>
