--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 (<b>Technical Track, 15 pages</b>)
 		[<a href="./Files/2022__ACSAC_Curiosity_Driven_Victim_Aware_RL_Attack.pdf" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
-		(Artifacts Evaluation: Functional)
+		(<font color="red">Artifacts Evaluation: Functional</font>)
             </p></li>
 		    
             <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
@@ -260,6 +260,7 @@
 		<p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<span><li> Siyu Xing, <b>Chen Gong</b>*, Hewei Guo, Xiaoyu Zhang, Xinwen Hou, Yu Liu.
                 “Unsupervised Domain Adaptation GAN Inversion for Image Editing”. under review IEEE Transaction on Image Processing.
+		[<a href="https://arxiv.org/pdf/2211.12123.pdf" target="_blank">Arxiv</a>]
                 </li></span>
                 </p>  
 		    
