--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 (<b>Technical Track, 15 pages</b>)
 		[<a href="./Files/2022__ACSAC_Curiosity_Driven_Victim_Aware_RL_Attack.pdf" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
-		(<font color="red">Artifacts Evaluation: Functional</font>)
+		(<font color="blue">Artifacts Evaluation: Functional</font>)
             </p></li>
 		    
             <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
