--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 2022.
                 (<b>Technical Track, 15 pages</b>)
 		[<a href="./Files/2022__ACSAC_Curiosity_Driven_Victim_Aware_RL_Attack.pdf" target="_blank">Paper</a>]
-                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
+                [<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Code</a>]
 		(<font color="blue">Artifacts Evaluation: Functional</font>)
             </p></li>
 		    
