--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
 		(<font color="blue">Artifacts Evaluation: Functional</font>)
+		(<font color="red">Won Honorable Mention Award!</font>)
             </p></li>
 		    
             <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
