--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                 <p><b>Awards</b>: </p>
                 <font size="3">
                 <ul>
+		    <li> 2022, the 19th China Post-graduate Mathematical Contest in Modeling, <b> the Second Prize </b> </li>
                     <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist </b> </li>
                     <li> 2019, the COMAP's Mathematical Contest in Modeling, <b> Meritorious Winner </b> </li>
                     <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention </b> </li>
