--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 (<b>Technical Track, 15 pages</b>)
 		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
+		[<a href="https://github.com/2019ChenGong/2019ChenGong.github.io/blob/main/Files/ACSAC-2022-Curious-Attackers.pdf"target="_blank">Pdf</a>]
 		(<font color="blue">Artifacts Evaluation: Functional</font>)
 		(<font color="red">Won Honorable Mention Award!</font>)
             </p></li>
