--- a/index.html
+++ b/index.html
@@ -162,6 +162,23 @@
             <A NAME="Publications">
                 <h2>Publications</h2>
             </A>
+		
+	    <b><font color="red">2023</font></b>
+	    <font size="3">
+            <ul>
+	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
+		Chao Li, <b>Chen Gong</b>, Xinwen Hou, Yu Liu, Qiang He, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
+                <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
+                2023.
+                <!--(<b>Technical Track, 15 pages</b>)
+		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
+                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
+		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Pdf</a>]
+		(<font color="blue">Artifacts Evaluation: Functional</font>)
+		(<font color="red">Won Honorable Mention Award!</font>)-->
+            </p></li>
+		        
+	    </ul>
  
     	    <b><font color="red">2022</font></b>
 	    <font size="3">
