--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 (<b>Technical Track, 15 pages</b>)
 		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
-		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Pdf</a>]
+		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Slides</a>]
 		(<font color="blue">Artifacts Evaluation: Functional</font>)
 		(<font color="red">Won Honorable Mention Award!</font>)
             </p></li>
