--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
             <A NAME="Publications">
                 <h2>Publications</h2>
             </A>
+	    "*" means equal contribution.
 		
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
             <ul>
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
-		Chao Li, <b>Chen Gong</b>, Xinwen Hou, Yu Liu, Qiang He, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
+		Chao Li*, <b>Chen Gong*</b>, Qiang He, Xinwen Hou, Yu Liu, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2023.
                 <!--(<b>Technical Track, 15 pages</b>)
