--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
             <A NAME="Publications">
                 <h2>Publications</h2>
             </A>
-	    "*" means equal contribution.
+		
+	    ("*" means equal contribution.)
 		
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
