--- a/index.html
+++ b/index.html
@@ -160,10 +160,8 @@
 
 
             <A NAME="Publications">
-                <h2>Publications</h2>
+                <h2>Publications</h2> ("*" means equal contribution.)
             </A>
-		
-	    ("*" means equal contribution.)
 		
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
