--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
 
 
             <A NAME="Publications">
-                <h2>Publications</h2> ("*" means equal contribution.)
+                <h2>Publications</h2> 
             </A>
+	    "*" means equal contribution.
+	    <br>
 		
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
