--- a/index.html
+++ b/index.html
@@ -71,30 +71,17 @@
 
 
 
-            <!-- <A NAME="News">
+            < <A NAME="News">
                 <h2>News</h2>
             </A>
-            <ul> -->
-                <!--<li> <b> <font color="#FF0000">[2021.07]</font> </b> Served as a <b>Session Chair</b> of IGARSS 2021 (<a href= "https://igarss2021.com/view_session.php?SessionID=1105" target="_blank">Session: Image Restoration</a>)!</li>
-<li> <b> <font color="#FF0000">[2021.06]</font> </b> Awarded with <b>Li Xiaowen Remote Sensing Young Scholar Prize</b> (<a href="https://geo.bnu.edu.cn/tzgg/115241.html" target="_blank"><font style="font-family:Microsoft YaHei">李小文遥感科学青年奖</font></a>)!</li>
-<li> <b> <font color="#FF0000">[2021.05]</font> </b> One paper is accepted by <b>ISPRS P&RS</b> (<a href="https://www.sciencedirect.com/science/article/pii/S092427162100
-58" target="_blank">link</a>, <a href="https://drive.google.com/file/d/1LlvUKtUWAKoF6R0igbREwvP2Wfja9UBv/view?usp=sharing" target="_blank">dataset</a>)!</li>
-<li> <b> <font color="#FF0000">[2021.04]</font> </b> One paper is accepted by <b>Earth System Science Data</b> (<a href= "https://essd.copernicus.org/articles/13/1385/2021/" target="_blank">link</a>, <a href= "https://doi.org/10.5281/zenodo.4417458" target="_blank">dataset</a>, <a href= "https://github.com/qzhang95/SGD-SM" target="_blank">code</a>)!</li>
-<li> <b> <font color="#FF0000">[2021.03]</font> </b> One paper is accepted as an <b>Oral Presentation</b> by IGARSS 2021!</li>
-<li> <b> <font color="#FF0000">[2020.12]</font> </b> Awarded with <b>"Wang Zhizhuo Innovation Talent" Outstanding Prize</b> (<a href="http://rsgis.whu.edu.cn/index.php?m=content&c=index&a=show&catid=123&id=7249" target="_blank"><font style="font-family:Microsoft YaHei">“王之卓创新人才奖”特等奖</font></a>)!</li>
-<li> <b> <font color="#FF0000">[2020.11]</font> </b> Awarded with <b>The Star of Self-improvement in Chinese College Students</b> (<a href="https://news.whu.edu.cn/info/1007/62905.htm" target="_blank"><font style="font-family:Microsoft YaHei">中国大学生自强之星</font></a>)!</li>
-<li> <b> <font color="#FF0000">[2020.10]</font> </b> Our <b>Multi-Temporal Full Width Sentinel-2 Cloud Detection and Removal Dataset</b> is released (<a href= "https://drive.google.com/file/d/1LlvUKtUWAKoF6R0igbREwvP2Wfja9UBv/view?usp=sharing" target="_blank">dataset</a>)!</li>
-<li> <b> <font color="#FF0000">[2020.09]</font> </b> Awarded with <b>Graduate Academic Innovation Outstanding Prize</b> (<a href="https://www.gs.whu.edu.cn/info/1057/7261.htm" target="_blank"><font style="font-family:Microsoft YaHei">武汉大学“研究生学术创新奖”特等奖</font></a>)!</li>
-<li> <b> <font color="#FF0000">[2020.08]</font> </b> Our <b>SGD-SM Products</b> are released (<a href= "https://github.com/qzhang95/SGD-SM" target="_blank">code</a>, <a href= "https://doi.org/10.5281/zenodo.4417458" target="_blank">dataset</a>)!</li>
-<li> <b> <font color="#FF0000">[2020.06]</font> </b> Our <b>HSI Denoising Dataset</b> is released (<a href= "https://wwa.lanzoui.com/iNjl9dna1vi" target="_blank">dataset</a>)!</li>
-<li> <b> <font color="#FF0000">[2020.05]</font> </b> Invited as a reporter for <b>GeoScience Café</b> (<a href= "./Files/张强_Geoscience Cafe254期.pdf" target="_blank">slides</a>)!</li>
-<li> <b> <font color="#FF0000">[2020.04]</font> </b> One paper is accepted by <b>ISPRS P&RS</b> (<a href="https://www.sciencedirect.com/science/article/pii/S0924271620301076" target="_blank">link</a>)!</li>
-<li> <b> <font color="#FF0000">[2020.03]</font> </b> One paper is accepted as an <b>Oral Presentation</b> by IGARSS 2020 (<a href="https://www.igarss2020.org/view_session.php?SessionID=1114" target="_blank">session</a>, <a href="./Files/Qiang Zhang_Slides_IGARSS2020.pdf" target="_blank">slides</a>)!</li>-->
-                <!-- <li> <b>
+            <ul>
+                <li> <b> <font color="#FF0000">[2021.07]</font> </b> Served as a <b>Session Chair</b> of IGARSS 2021 (<a href= "https://igarss2021.com/view_session.php?SessionID=1105" target="_blank">Session: Image Restoration</a>)!</li>
+		<li> <b> <font color="#FF0000">[2021.06]</font> </b> Awarded with <b>Li Xiaowen Remote Sensing Young Scholar Prize</b> (<a href="https://geo.bnu.edu.cn/tzgg/115241.html" target="_blank"><font style="font-family:Microsoft YaHei">李小文遥感科学青年奖</font></a>)!</li>
+                <li> <b>
                         <font color="#FF0000">[2021.04]</font>
                     </b> One paper is accepted by <b>IJCNN</b>!</li>
             </ul>
-            <br /> -->
+            <br /> 
 
 
 
