--- a/index.html
+++ b/index.html
@@ -75,11 +75,8 @@
                 <h2>News</h2>
             </A>
             <ul>
-                <li> <b> <font color="#FF0000">[2021.07]</font> </b> Served as a <b>Session Chair</b> of IGARSS 2021 (<a href= "https://igarss2021.com/view_session.php?SessionID=1105" target="_blank">Session: Image Restoration</a>)!</li>
-		<li> <b> <font color="#FF0000">[2021.06]</font> </b> Awarded with <b>Li Xiaowen Remote Sensing Young Scholar Prize</b> (<a href="https://geo.bnu.edu.cn/tzgg/115241.html" target="_blank"><font style="font-family:Microsoft YaHei">李小文遥感科学青年奖</font></a>)!</li>
-                <li> <b>
-                        <font color="#FF0000">[2021.04]</font>
-                    </b> One paper is accepted by <b>IJCNN</b>!</li>
+		<li> <b> <font color="#FF0000">[2023.01]</font> </b> One papers are accepted by <b>AAMAS 2023</b>! </li>
+                <li> <b> <font color="#FF0000">[2022.12]</font> </b> Our paper wins the <b>Honorable Mention Award</b> at ACSAC 2022! </li>
             </ul>
             <br /> 
 
