--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2>News</h2>
             </A>
             <ul>
-		<li> <b> <font color="#FF0000">[2023.01]</font> </b> One papers are accepted by <b>AAMAS 2023</b>! </li>
+		<li> <b> <font color="#FF0000">[2023.01]</font> </b> One paper is accepted by <b>AAMAS 2023</b>! See you in London. </li>
                 <li> <b> <font color="#FF0000">[2022.12]</font> </b> Our paper wins the <b>Honorable Mention Award</b> at ACSAC 2022! </li>
             </ul>
             <br /> 
@@ -155,12 +155,10 @@
 		Chao Li*, <b>Chen Gong*</b>, Qiang He, Xinwen Hou, Yu Liu, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2023.
+		[<a href="https://github.com/Jincate/CCEP" target="_blank">Code</a>]
                 <!--(<b>Technical Track, 15 pages</b>)
 		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
-                [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
-		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Pdf</a>]
-		(<font color="blue">Artifacts Evaluation: Functional</font>)
-		(<font color="red">Won Honorable Mention Award!</font>)-->
+		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Pdf</a>]-->
             </p></li>
 		        
 	    </ul>
