--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
 
-            < <A NAME="News">
+            <A NAME="News">
                 <h2>News</h2>
             </A>
             <ul>
