--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 		Chao Li*, <b>Chen Gong*</b>, Qiang He, Xinwen Hou, Yu Liu, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2023.
+		[<a href="https://arxiv.org/pdf/2301.02375.pdf" target="_blank">Paper</a>]
 		[<a href="https://github.com/Jincate/CCEP" target="_blank">Code</a>]
                 <!--(<b>Technical Track, 15 pages</b>)
-		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
-		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Pdf</a>]-->
+		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Slides</a>]-->
             </p></li>
 		        
 	    </ul>
