--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </A>
             From  2020.06 - now,I am a master's student in the Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. 
 	    From 2021.09 -  2022.09, I worked as a visiting student in the School of Computing and Information Systems, Singapore Management University, where I was honored to work closely with 
-		Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a> and <a href="https://yangzhou6666.github.io/" target="_blank">Zhou Yang</a>.
+		Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>, <a href="https://yangzhou6666.github.io/" target="_blank">Zhou Yang</a> and <a href="https://jiekeshi.github.io/" target="_blank">Jieke Shi</a>. 
 	    In 2020.06, I obtained my Bachelor's degree from the School of Information Engineering, China University of Geosciences, Beijing, where I worked with Prof. <a href="https://dblp.org/pid/57/9704.html" target="_blank">Yunyun Niu</a>.
 	    Currently, I focus on the following research topics: reinforcement learning security; offline reinforcement learning; convex duality in reinforcement learning; adversarial policy;
             generative model; variational inference.
