--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2023.02]</font> </b> I will be a Ph.D. student in the computer science department of the University of Virginia in 2023 fall, working closely with Prof. <a href="https://tianhao.wang/" target="_blank">Tianhao Wang</a>. </li>
 		<li> <b> <font color="#FF0000">[2023.01]</font> </b> One paper is accepted by <b>AAMAS 2023</b>! See you in London. </li>
                 <li> <b> <font color="#FF0000">[2022.12]</font> </b> Our paper wins the <b>Honorable Mention Award</b> at ACSAC 2022! </li>
             </ul>
@@ -297,7 +298,7 @@
                 <p><b>Awards</b>: </p>
                 <font size="3">
                 <ul>
-		    <li> 2022, the 19th China Post-graduate Mathematical Contest in Modeling, <b> the Second Prize </b> </li>
+		    <li> 2022, the 19th China Post-graduate Mathematical Contest in Modeling, <b> Second Prize </b> </li>
                     <li> 2020, the COMAP's Mathematical Contest in Modeling, <b> Finalist </b> </li>
                     <li> 2019, the COMAP's Mathematical Contest in Modeling, <b> Meritorious Winner </b> </li>
                     <li> 2018, the COMAP's Mathematical Contest in Modeling, <b> Honorable Mention </b> </li>
