--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2>News</h2>
             </A>
             <ul>
-		<li> <b> <font color="#FF0000">[2023.02]</font> </b> I will be a Ph.D. student in the computer science department of the University of Virginia in 2023 fall, working closely with Prof. <a href="https://tianhao.wang/" target="_blank">Tianhao Wang</a>. </li>
+		<li> <b> <font color="#FF0000">[2023.02]</font> </b> I will be a Ph.D. student in the computer science department of the <b> University of Virginia </b> in 2023 fall, working closely with Prof. <a href="https://tianhao.wang/" target="_blank">Tianhao Wang</a>. </li>
 		<li> <b> <font color="#FF0000">[2023.01]</font> </b> One paper is accepted by <b>AAMAS 2023</b>! See you in London. </li>
                 <li> <b> <font color="#FF0000">[2022.12]</font> </b> Our paper wins the <b>Honorable Mention Award</b> at ACSAC 2022! </li>
             </ul>
