--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
 	    <b><font color="red">Pre-print</font></b>
             <font size="3">
             <ul>
+		
+		<p style="text-indent: -1.6rem;margin-left: 0rem;">
+		<span><li> Hao Chen, <b>Chen Gong</b>*, Yize Wang, Xinwen Hou.
+                “Recover Triggered States: Protect Model Against Backdoor Attack in Reinforcement Learning”. under review IEEE Conference on Decision and Control (CDC).
+		[<a href="https://arxiv.org/pdf/2211.12123.pdf" target="_blank">Arxiv</a>]
+                </li></span>
+                </p>  
+		    
 		<p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<span><li> Siyu Xing, <b>Chen Gong</b>*, Hewei Guo, Xiaoyu Zhang, Xinwen Hou, Yu Liu.
                 “Unsupervised Domain Adaptation GAN Inversion for Image Editing”. under review IEEE Transaction on Image Processing.
