--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <br />
                                 <br />
 
-                                Email: gongchen2020@ia.ac.cn
+                                Email: gongchen2020@ia.ac.cn; fzv6en@virginia.edu
                                 <br />
                                
                                 [<a href="./Files/Chen_Gong_s_CV.pdf" target="_blank">CV</a>]
