--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
 		<p style="text-indent: -1.6rem;margin-left: 0rem;">
 		<span><li> Hao Chen, <b>Chen Gong</b>*, Yize Wang, Xinwen Hou.
                 “Recover Triggered States: Protect Model Against Backdoor Attack in Reinforcement Learning”. under review IEEE Conference on Decision and Control (CDC).
-		[<a href="https://arxiv.org/pdf/2211.12123.pdf" target="_blank">Arxiv</a>]
+		[<a href="https://arxiv.org/pdf/2304.00252.pdf" target="_blank">Arxiv</a>]
+		[<a href="https://github.com/Spaxilia/Recover-triggered-states" target="_blank">Code</a>]
                 </li></span>
                 </p>  
 		    
