--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
                 </A>
                 <ul>
                     <li> 2022, ACSAC Artifacts Evaluation Committee </li>
+		    <li> 2023, CDC Reviewers </li>
                     
                 </ul>
                     
