--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
                 </A>
                 <ul>
                     <li> 2022, ACSAC Artifacts Evaluation Committee </li>
-		    <li> 2023, CDC Reviewers </li>
+		    <li> 2023, CDC Reviewer </li>
+		    <li> IEEE Transactions on Industrial Electronics Reviewer </li>
                     
                 </ul>
                     
