--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
 	    <font size="3">
             <ul>
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
+		Bowen Xu, Thanh-Dat Nguyen, Thanh Le-Cong, Thong Hoang, Jiakun Liu, Kisub Kim, <b>Chen Gong</b>, Changan Niu, Chenyu Wang, Bach Le, David Lo, “Are We Ready to Embrace Generative AI for Software Q&A?”,
+                <i>38th IEEE/ACM International Conference on Automated Software Engineering </i> (<b>ASE</b>), NIER track,
+                2023.
+		[<a href="https://arxiv.org/pdf/2301.02375.pdf" target="_blank">Paper</a>]
+		[<a href="https://github.com/Jincate/CCEP" target="_blank">Code</a>]
+                <!--(<b>Technical Track, 15 pages</b>)
+		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Slides</a>]-->
+            </p></li>
+	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Chao Li*, <b>Chen Gong*</b>, Qiang He, Xinwen Hou, Yu Liu, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2023.
