--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <A NAME="Short Bio">
                 <h2>Short Bio</h2>
             </A>
-            From  2020.06 - now,I am a master's student in the Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. 
+            From  2020.06 - 2023.06,I am a master's student in the Institute of Automation, Chinese Academy of Sciences, supervised by Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a>. 
 	    From 2021.09 -  2022.09, I worked as a visiting student in the School of Computing and Information Systems, Singapore Management University, where I was honored to work closely with 
 		Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>, <a href="https://yangzhou6666.github.io/" target="_blank">Zhou Yang</a> and <a href="https://jiekeshi.github.io/" target="_blank">Jieke Shi</a>. 
 	    In 2020.06, I obtained my Bachelor's degree from the School of Information Engineering, China University of Geosciences, Beijing, where I worked with Prof. <a href="https://dblp.org/pid/57/9704.html" target="_blank">Yunyun Niu</a>.
@@ -103,13 +103,17 @@
                 <h2>Education</h2>
             </A>
             <ul>
-                <li>2021.08-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visiting M.A. in <a
+		<li>2023.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visiting M.A. in Department of Computer Science, University of Virginia.
+                    	<br>
+                    	Supervisor:
+                    	Prof. <a href="https://scholar.google.com/citations?user=TkgyXGwAAAAJ&hl=en" target="_blank">Tianhao Wang</a> </li>
+                <li>2021.08-2023.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visiting M.A. in <a
                         href="http://www.ia.cas.cn/" target="_blank">School of Computing and Information Systems</a>, <a
                         href="https://scis.smu.edu.sg/" target="_blank">Singapore Management University</a>.
                     	<br>
                     	Supervisor:
                     	Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a> </li>
-                <li>2020.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
+                <li>2020.09-2023.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
                         href="https://www.smu.edu.sg/" target="_blank">Institute of Automation</a>, <a
                         href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a>.
                     	<br>
