--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h2>Education</h2>
             </A>
             <ul>
-		<li>2023.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Visiting M.A. in Department of Computer Science, University of Virginia.
+		<li>2023.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ph.D. student in Department of Computer Science, University of Virginia.
                     	<br>
                     	Supervisor:
                     	Prof. <a href="https://scholar.google.com/citations?user=TkgyXGwAAAAJ&hl=en" target="_blank">Tianhao Wang</a> </li>
