--- a/index.html
+++ b/index.html
@@ -29,15 +29,12 @@
                                 <font size="4" ; font style="font-family:Microsoft YaHei">龚晨</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Master Student </i>
+                            <i> Ph.D. Student </i>
                             <br /><br />
-                            <a href="http://www.ia.cas.cn/" target="_blank">Institute of Automation</a>, <a
-                                href="https://www.cas.cn/" target="_blank">Chinese Academy of Sciences</a><br />
-                            <a href="https://ai.ucas.ac.cn/" target="_blank">School of Artificial Intelligence</a>, <a
-                                href="https://www.ucas.ac.cn/" target="_blank">University of Chinese Academy of
-                                Sciences</a><br />
+                            <a href="https://engineering.virginia.edu/departments/computer-science" target="_blank">Department of Computer Science</a>, <a
+                                href="https://www.virginia.edu/" target="_blank">University of Virginia</a><br />
                             <br />
-                            Location: 95 Zhongguancun East Road, BEIJING, CHINA<br />
+                            Location: Charlottesville, VA, USA<br />
                             <class="staffshortcut">
                                 <!-- <A HREF="#News">News</A> | -->
                                 <A HREF="#Bio">Short Bio</A> |
@@ -103,7 +100,7 @@
                 <h2>Education</h2>
             </A>
             <ul>
-		<li>2023.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp Ph.D. student in Department of Computer Science, University of Virginia.
+		<li>2023.09-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp Ph.D. student in Department of Computer Science, University of Virginia.
                     	<br>
                     	Supervisor:
                     	Prof. <a href="https://scholar.google.com/citations?user=TkgyXGwAAAAJ&hl=en" target="_blank">Tianhao Wang</a> </li>
