--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <i>38th IEEE/ACM International Conference on Automated Software Engineering </i> (<b>ASE</b>), NIER track,
                 2023.
 		[<a href="https://arxiv.org/pdf/2307.09765.pdf" target="_blank">Paper</a>]
-		[<a href="https://anonymous.4open.science/r/GAI4SQA-FD5C" target="_blank">Code</a>]
+		[<a href="https://github.com/maxxbw54/GAI4SQA" target="_blank">Code</a>]
             </p></li>
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Chao Li*, <b>Chen Gong*</b>, Qiang He, Xinwen Hou, Yu Liu, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
